kubernetes/apps/default/plex/app/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: plex
  namespace: default
  labels:
    kubernetes.io/service-name: plex
addressType: IPv4
ports:
  - name: '' # empty because port 9376 is not assigned as a well-known
             # port (by IANA)
    appProtocol: http
    protocol: TCP
    port: 32400
endpoints:
  - addresses:
      - "192.168.1.72"
