kubernetes/apps/default/plex/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 32400
      targetPort: 32400
