kubernetes/apps/default/plex/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "plex.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  number: 32400
            path: /
            pathType: Prefix
